--- a/src/widgets/support-chat/components/desktop-chat-version/components/left-support-window/left-support-window.module.scss
+++ b/src/widgets/support-chat/components/desktop-chat-version/components/left-support-window/left-support-window.module.scss
@@ -40,6 +40,6 @@
     .contentHelperText::-webkit-scrollbar-thumb {
         width: 9px;
         border-radius: 7px;
-        background-color: #013878;
+        background-color: #FD7900;
     }
 }
