Задать вопрос юристу

--- a/src/entities/support-chat/legal-advice/components/legal-form/legal-form.module.scss
+++ b/src/entities/support-chat/legal-advice/components/legal-form/legal-form.module.scss
@@ -14,6 +14,10 @@
     font-weight: 600;
 }
 
+.textareaRadius {
+    border-radius: 27px;
+}
+
 @media screen and (max-width: 490px) {
     .legalAdviceForm {
         row-gap: 7px;
