Верстка попапа профиля

--- a/src/widgets/navigation/navigation.module.scss
+++ b/src/widgets/navigation/navigation.module.scss
@@ -31,6 +31,10 @@
   column-gap: 10px;
 }
 
+.profilePopup {
+  position: relative;
+}
+
 .navigationInner__vk,
 .burgerMenu,
 .closeNavigationMobileButton,
@@ -162,6 +166,7 @@
     display: none;
   }
 }
+
 
 @media screen and (min-width: 640px) and (max-width: 1024px) {
   .navigationWrapper {
