--- a/src/widgets/navigation/components/profile-popup/profile-popup.module.scss
+++ b/src/widgets/navigation/components/profile-popup/profile-popup.module.scss
@@ -10,6 +10,12 @@
 
     padding: 13px 0;
     overflow: hidden;
+
+    display: none;
+}
+
+.visible {
+    display: block;
 }
 
 .profileMenuLinks {
