Логика редактирования профиля

--- a/src/widgets/navigation/components/profile-popup/profile-popup.module.scss
+++ b/src/widgets/navigation/components/profile-popup/profile-popup.module.scss
@@ -3,6 +3,7 @@
     position: absolute;
     top: calc(100% + 7px);
     right: 0px;
+    z-index: 1;
 
     border-radius: 30px;
     border: 2px solid #013878;
