--- a/src/pages/cabinet/edit-profile/edit-profile.module.scss
+++ b/src/pages/cabinet/edit-profile/edit-profile.module.scss
@@ -122,7 +122,7 @@
     text-align: center;
     font-size: 24px;
     font-weight: 600;
-    line-height: 94.523%; /* 22.685px */
+    line-height: 1.15; /* 22.685px */
     letter-spacing: -0.6px;
 
     max-width: 721px;
