--- a/src/pages/cabinet/edit-profile/edit-profile.module.scss
+++ b/src/pages/cabinet/edit-profile/edit-profile.module.scss
@@ -88,6 +88,10 @@
     .editInput {
         height: 81px;
         width: 100%;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 87.023%; /* 20.885px */
+        letter-spacing: -0.6px;
     }
 }
 
