--- a/src/pages/cabinet/appeals/appeals.module.scss
+++ b/src/pages/cabinet/appeals/appeals.module.scss
@@ -1,5 +1,5 @@
 .appealsWrapper {
-    // padding-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .pageContent {
@@ -7,7 +7,7 @@
 }
 
 .container {
-    max-width: 1440px;
+    max-width: 1400px;
     margin: 0 auto;
     width: 100%;
 }
