Страница с выбором юриста

--- a/src/pages/cabinet/appeals/components/appeal-item/appeal-item.module.scss
+++ b/src/pages/cabinet/appeals/components/appeal-item/appeal-item.module.scss
@@ -9,6 +9,7 @@
     justify-content: space-between;
     padding: 0 49px;
     margin-top: -3px;
+    cursor: pointer;
 
     &:first-child {
         margin-top: 0;
