--- a/src/pages/cabinet/waiting-lawyer-appeal/waiting-lawyer-appeal.module.scss
+++ b/src/pages/cabinet/waiting-lawyer-appeal/waiting-lawyer-appeal.module.scss
@@ -17,6 +17,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-bottom: 81px;
 
     &__h1 {
         color:#013878;
