--- a/src/pages/cabinet/waiting-lawyer-appeal/components/lawyer-item/lawyer-item.module.scss
+++ b/src/pages/cabinet/waiting-lawyer-appeal/components/lawyer-item/lawyer-item.module.scss
@@ -1,3 +1,8 @@
+.interestedLawyerItemWrapper {
+    height: 524px;
+    width: 296px;
+}
+
 .interestedLawyerItem {
     width: 296px;
     height: 466px;
