--- a/src/entities/page-layout/page-layout.module.scss
+++ b/src/entities/page-layout/page-layout.module.scss
@@ -1,9 +1,27 @@
 .pageContentWrapper {
-    margin: 77px 60px 100px 60px;
+    margin: 0px 60px 0px 60px;
 }
 
 .container {
     max-width: 1400px;
     margin: 0 auto;
     width: 100%;
+}
+
+@media screen and (max-width: 1440px) and (min-width: 1025px) {
+    .pageContentWrapper {
+        margin: 0px 45px 0px 45px;
+    }
+}
+
+@media screen and (max-width: 1024) and (min-width: 641) {
+    .pageContentWrapper {
+        margin: 0px 30px 0px 30px;
+    }
+}
+
+@media screen and (max-width: 639px) {
+    .pageContentWrapper {
+        margin: 0px 15px 0px 15px;
+    }
 }
