--- a/src/pages/home/components/about-us/about-us.module.scss
+++ b/src/pages/home/components/about-us/about-us.module.scss
@@ -1,5 +1,9 @@
 @import 'app/styles/_exports.scss';
 
+.aboutUsWrapper {
+  margin-top: 139px;
+}
+
 .titleText {
   width: 1081px;
   margin: 0 auto;
