--- a/src/pages/cabinet/waiting-lawyer-appeal/waiting-lawyer-appeal.module.scss
+++ b/src/pages/cabinet/waiting-lawyer-appeal/waiting-lawyer-appeal.module.scss
@@ -1,3 +1,8 @@
+.lawyerAppealWrapper {
+    margin-top: 74px;
+    margin-bottom: 74px;
+}
+
 .lawyerAppealHeader {
     display: flex;
     align-items: center;
