Фиксы верстки главной и навигации

--- a/src/entities/page-layout/page-layout.module.scss
+++ b/src/entities/page-layout/page-layout.module.scss
@@ -14,7 +14,7 @@
     }
 }
 
-@media screen and (max-width: 1024) and (min-width: 641) {
+@media screen and (max-width: 1024px) and (min-width: 641px) {
     .pageContentWrapper {
         margin: 0px 30px 0px 30px;
     }
