Отступ навигации мобилки

--- a/src/widgets/navigation/navigation.module.scss
+++ b/src/widgets/navigation/navigation.module.scss
@@ -145,6 +145,7 @@
     width: 100%;
     position: fixed;
     top: 0;
+    left: 0;
     height: 100%;
     background-color:#F3F8FF;
     flex-direction: column;
