--- a/src/pages/home/components/about-us/components/additionalCard/Additional.module.scss
+++ b/src/pages/home/components/about-us/components/additionalCard/Additional.module.scss
@@ -29,9 +29,9 @@
 // === media ===
 
 @media screen and (min-width: 1440px) and (max-width: 1900px) {
-  .additionalCardWrapper {
-    width: 437px;
-  } 
+  // .additionalCardWrapper {
+  //   width: 437px;
+  // } 
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
