--- a/src/pages/home/components/about-us/components/problemCard/ProblemCard.module.scss
+++ b/src/pages/home/components/about-us/components/problemCard/ProblemCard.module.scss
@@ -39,9 +39,9 @@
 }
 
 @media screen and (min-width: 1440px) and (max-width: 1920px) {
-  .problemCardWrapper {
-    width: 436px;
-  }
+  // .problemCardWrapper {
+  //   width: 436px;
+  // }
 }
 
 @media screen and (max-width: 1440px) {
