--- a/src/pages/home/components/about-us/components/solutionCard/SolutionCard.module.scss
+++ b/src/pages/home/components/about-us/components/solutionCard/SolutionCard.module.scss
@@ -41,9 +41,9 @@
 }
 
 @media screen and (min-width: 1440px) and (max-width: 1920px) {
-  .solutionCardWrapper {
-    width: 447px;
-  }
+  // .solutionCardWrapper {
+  //   width: 447px;
+  // }
 }
 
 @media screen and (max-width: 1440px) {
