--- a/src/pages/home/components/about-us/components/problemCard/ProblemCard.module.scss
+++ b/src/pages/home/components/about-us/components/problemCard/ProblemCard.module.scss
@@ -38,10 +38,10 @@
   display: none;
 }
 
-@media screen and (min-width: 1440px) and (max-width: 1920px) {
-  // .problemCardWrapper {
-  //   width: 436px;
-  // }
+@media screen and (min-width: 1440px) and (max-width: 1919px) {
+  .problemCardWrapper {
+    width: 436px;
+  }
 }
 
 @media screen and (max-width: 1440px) {
@@ -52,7 +52,7 @@
 
 
 
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024px) and (max-width: 1439px) {
   .problemCardWrapper {
     width: 100%;
     height: 455px;
