--- a/src/pages/cabinet/edit-profile/edit-profile.module.scss
+++ b/src/pages/cabinet/edit-profile/edit-profile.module.scss
@@ -68,6 +68,9 @@
     flex-direction: column;
 
     margin-bottom: 200px;
+
+    visibility: hidden;
+    pointer-events: none;
 }
 
 .submitButton {
@@ -91,4 +94,9 @@
     letter-spacing: -0.6px;
 
     max-width: 721px;
+}
+
+.visibility {
+    visibility: visible;
+    pointer-events: all;
 }
