Прибил футер к низу страницы

--- a/src/pages/cabinet/waiting-lawyer-appeal/waiting-lawyer-appeal.module.scss
+++ b/src/pages/cabinet/waiting-lawyer-appeal/waiting-lawyer-appeal.module.scss
@@ -3,6 +3,10 @@
     margin-bottom: 74px;
 }
 
+.loaderWrapper {
+    margin-top: 74px;
+}
+
 .lawyerAppealHeader {
     display: flex;
     align-items: center;
