--- a/src/pages/cabinet/chat-with-lawyer/chat-with-lawyer.module.scss
+++ b/src/pages/cabinet/chat-with-lawyer/chat-with-lawyer.module.scss
@@ -1,7 +1,40 @@
 .chatWithLawyerWrapper {
     width: 64.46969697%;
     height: 100%;
+    
+}
+
+.chatWindow {
+    width: 100%;
+    height: 701px;
     border-radius: 50px;
     border: 3px solid #013878;
     background: #E0EEFF;
+}
+
+.sendMessageWrapper {
+    height: 77px;
+    position: relative;
+    .messageInput {
+        height: 77px !important;
+        margin-top: -3px;
+        padding-left: 80px;
+        font-size: 24px !important;
+        font-weight: 600 !important;
+        line-height: 87.023% !important; /* 20.885px */
+        letter-spacing: -0.6px !important;
+    }
+    .sendMessageButton {
+        position: absolute;
+        top: -3px;
+        right: 0;
+        height: 77px;
+        width: 192px;
+        border-radius: 50px;
+        border: 3px solid #013878;
+        font-size: 25px;
+        font-weight: 600;
+        line-height: 87.023%; /* 21.756px */
+        letter-spacing: -0.625px;
+    }
 }
