--- a/src/pages/cabinet/chat-with-lawyer/chat-with-lawyer.module.scss
+++ b/src/pages/cabinet/chat-with-lawyer/chat-with-lawyer.module.scss
@@ -10,6 +10,7 @@
     border-radius: 50px;
     border: 3px solid #013878;
     background: #E0EEFF;
+    padding: 26px;
 }
 
 .sendMessageWrapper {
