--- a/src/pages/cabinet/appeals/appeals.module.scss
+++ b/src/pages/cabinet/appeals/appeals.module.scss
@@ -39,9 +39,47 @@
         height: 77px;
         border-radius: 40px;
         font-size: 28px;
-        font-style: normal;
         font-weight: 600;
         line-height: 87.023%; /* 24.366px */
         letter-spacing: -0.7px;
     }
+}
+
+@media screen and (max-width: 480px) {
+    .pageTitle {
+        font-size: 30px;
+        font-weight: 600;
+        line-height: 90%; /* 27px */
+        letter-spacing: -0.75px;
+        margin-bottom: 23px;
+    }
+    .appealsFilter {
+        flex-direction: column-reverse;
+        margin-bottom: 15px;
+
+        &__select {
+            width: 100%;
+            p {
+                font-size: 18px !important;
+            }
+        }
+
+        .selectOption {
+            height: 50px;
+            padding-right: 17px;
+            padding-left: 20px;
+        }
+
+        .askQuestionButton {
+            width: 100%;
+            margin-bottom: 20px;
+            border-radius: 30px;
+            height: 50px;
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 87.023%; /* 15.664px */
+            letter-spacing: -0.45px;
+        }
+    }
+
 }
