--- a/src/pages/cabinet/appeals/components/appeal-item/appeal-item.module.scss
+++ b/src/pages/cabinet/appeals/components/appeal-item/appeal-item.module.scss
@@ -45,3 +45,27 @@
         letter-spacing: -0.75px;
     }
 }
+
+@media screen and (max-width: 480px) {
+    .appealItemWrapper {
+        border: 2px solid #013878;
+        margin-top: -2px;
+        padding: 9px 4px 9px 19px;
+        height: 50px;
+
+        .appealTitle {
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 105%; /* 18.9px */
+            letter-spacing: -0.45px;
+        }
+
+        .appealStatus {
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 90%; /* 16.2px */
+            letter-spacing: -0.45px;
+            width: 176px;
+        }
+    }
+}
