--- a/src/pages/cabinet/appeals/appeals.module.scss
+++ b/src/pages/cabinet/appeals/appeals.module.scss
@@ -46,6 +46,10 @@
 }
 
 @media screen and (max-width: 480px) {
+    .appealsWrapper {
+        margin-top: 40px;
+        margin-bottom: 55px;
+    }
     .pageTitle {
         font-size: 30px;
         font-weight: 600;
