--- a/src/pages/lawyer-cabinet/market/components/free-question-item/free-question-item.module.scss
+++ b/src/pages/lawyer-cabinet/market/components/free-question-item/free-question-item.module.scss
@@ -1,6 +1,7 @@
 .applicationItemWrapper {
     width: 296px;
     height: 224px;
+    position: relative;
 }
 
 .applicationItem {
@@ -26,7 +27,6 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 28px;
             font-size: 18px;
             font-style: normal;
             font-weight: 600;
@@ -39,7 +39,16 @@
             }
         }
     }
+}
 
+.wrapper:last-child {
+    // flex: 1 1 auto;
+}
+
+.applicationButtonWrapper {
+    position: absolute;
+    bottom: 0%;
+    left: 0;
 }
 
 .applicationButton {
