Верстка профиля юриста

--- a/src/entities/appeals/appeal-item/appeal-item.module.scss
+++ b/src/entities/appeals/appeal-item/appeal-item.module.scss
@@ -16,18 +16,18 @@
         margin-top: 0;
     }
 
-    &:hover {
-        background-color: #013878;
-        cursor: pointer;
-    }
+    // &:hover {
+    //     background-color: #013878;
+    //     cursor: pointer;
+    // }
 
-    &:hover .appealTitle{
-        color: #fff;
-    }
+    // &:hover .appealTitle{
+    //     color: #fff;
+    // }
 
-    &:hover .appealStatus {
-        color: #fff;
-    }
+    // &:hover .appealStatus {
+    //     color: #fff;
+    // }
 
     .appealTitle {
         color: #013878;
