--- a/src/pages/lawyer-cabinet/lawyer-profile/lawyer-profile.module.scss
+++ b/src/pages/lawyer-cabinet/lawyer-profile/lawyer-profile.module.scss
@@ -5,3 +5,84 @@
 .profileWrapper {
     margin-bottom: 83px;
 }
+
+.title {
+    margin-bottom: 52px;
+}
+
+.avatarSectionWrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 70px;
+}
+
+.avatarWrapper {
+    width: 473px;
+    height: 414px;
+    border-radius: 25px;
+    border: 3px solid #FD7900;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    position: relative;
+
+    &__button {
+        position: absolute;
+        bottom: -3px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 501px;
+    }
+}
+
+.inputWrapper {
+    display: flex;
+
+    .input {
+        height: 81px;
+        font-size: 30px;
+        font-weight: 600;
+        line-height: 90%; /* 27px */
+        letter-spacing: -0.75px;
+        padding: 26px 26px 28px 40px;
+    }
+}
+
+.editInputs {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    margin-bottom: 37px;
+}
+
+.passwordButton {
+    width: 233px;
+    height: 81px;
+}
+
+.profileTextAreas {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+    margin-bottom: 35px;
+
+    &__area {
+        border-radius: 30px;
+        margin-top: 15px;
+    }
+}
+
+.submitButton {
+    .button {
+        width: 427px;
+        height: 81px;
+    }
+}
+
+.label {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 87.023%; /* 20.885px */
+    letter-spacing: -0.6px;
+}
