--- a/src/entities/profile-key-name/profile-key-name.module.scss
+++ b/src/entities/profile-key-name/profile-key-name.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 
     color: #013878;
     font-size: 24px;
