Кнопка назад в Профиле юриста

--- a/src/pages/lawyer-cabinet/lawyer-profile/lawyer-profile.module.scss
+++ b/src/pages/lawyer-cabinet/lawyer-profile/lawyer-profile.module.scss
@@ -1,9 +1,12 @@
 .profileWrapper {
-    margin: 77px 0;
+    margin: 77px 0 83px 0;
+    position: relative;
 }
 
-.profileWrapper {
-    margin-bottom: 83px;
+.goBackButton {
+    width: 183px;
+    position: absolute;
+    top: -25px;
 }
 
 .title {
