Функционал выбора чата и установка соединения

--- a/src/entities/layouts/chats-applications/components/application-item/application-item.module.scss
+++ b/src/entities/layouts/chats-applications/components/application-item/application-item.module.scss
@@ -17,10 +17,16 @@
     text-decoration: none;
 
     &:hover {
-        color: #fff;
-        background-color: #013878;
-        cursor: pointer;
+        // color: #fff;
+        // background-color: #013878;
+        // cursor: pointer;
     }
+}
+
+.selectedChat {
+    color: #fff;
+    background-color: #013878;
+    cursor: pointer;
 }
 
 .activeApplication {
