--- a/src/pages/cabinet/chat-with-lawyer/chat-with-lawyer.module.scss
+++ b/src/pages/cabinet/chat-with-lawyer/chat-with-lawyer.module.scss
@@ -6,6 +6,7 @@
 .chatWindow {
     width: 100%;
     height: 701px;
+    overflow-y: auto;
     border-radius: 50px;
     border: 3px solid #013878;
     background: #E0EEFF;
