--- a/src/pages/cabinet/chat-with-lawyer/chat-with-lawyer.module.scss
+++ b/src/pages/cabinet/chat-with-lawyer/chat-with-lawyer.module.scss
@@ -6,16 +6,17 @@
 .chatWindow {
     width: 100%;
     height: 701px;
-    overflow-y: auto;
     border-radius: 50px;
     border: 3px solid #013878;
     background: #E0EEFF;
     padding: 26px;
+    padding-right: 0px;
 }
 
 .sendMessageWrapper {
     height: 77px;
     position: relative;
+    
     .messageInput {
         height: 77px !important;
         margin-top: -3px;
