ФИО отправителя прикрутил

--- a/src/pages/cabinet/chat-with-lawyer/components/message-item/message-item.module.scss
+++ b/src/pages/cabinet/chat-with-lawyer/components/message-item/message-item.module.scss
@@ -27,6 +27,8 @@
         font-weight: 600;
         line-height: 87.023%; /* 20.885px */
         letter-spacing: -0.6px;
+        margin-bottom: 6px;
+        margin-left: 23px;
     }
 }
 
