Скролл для чатов

--- a/src/pages/chats-applications/components/application-item/application-item.module.scss
+++ b/src/pages/chats-applications/components/application-item/application-item.module.scss
@@ -21,6 +21,10 @@
         // background-color: #013878;
         // cursor: pointer;
     }
+
+    &:first-child {
+        // margin-top: 0;
+    }
 }
 
 .selectedChat {
