Сброс пароля по почте

--- a/src/widgets/navigation/components/reset-password-modal/reset-password-modal.module.scss
+++ b/src/widgets/navigation/components/reset-password-modal/reset-password-modal.module.scss
@@ -1,12 +1,14 @@
-.resetPasswordInput {
-    margin-bottom: 23px;
-}
-
-.resetPasswordButton {
-    width: fit-content;
-    padding: 0 50px;
-}
-
 .modalContentWrapper {
     margin-bottom: 23px;
+}
+
+.hideContent {
+    margin-bottom: 0;
+}
+
+.wrapper {
+    height: 358px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
